<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding = "10dp"
tools:context=".Registro">

<EditText
    android:id="@+id/txtUsuario"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/txtNombreHint"
    android:inputType="textPersonName"
    android:minHeight="48dp"
    android:singleLine="true"
    android:textColor="@color/black"
    android:textColorHint="@color/black" />

<EditText
    android:id="@+id/txtContra"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/txtContraHint"
    android:inputType="textPassword"
    android:minHeight="48dp"
    android:textColor="@color/black"
    android:textColorHint="@color/black"
    android:autofillHints=""
    android:layout_below="@+id/txtUsuario"/>
<EditText
    android:id="@+id/txtCorreo1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/correo1"
    android:inputType="textEmailAddress"
    android:minHeight="48dp"
    android:textColor="@color/black"
    android:textColorHint="@color/black"
    android:autofillHints=""
    android:layout_below="@+id/txtContra"/>
    <EditText
        android:id="@+id/txtCel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/celular"
        android:inputType="textAutoComplete"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:autofillHints=""
        android:layout_below="@+id/txtCorreo1"/>

<Button
    android:id="@+id/btnRegistro"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:onClick="inicioSesion"
    android:text="@string/registrar"
    android:textColor="#E1BEE7"
    android:layout_marginTop="50dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:ignore="TextContrastCheck"
    android:layout_below="@+id/txtCel"/>

</RelativeLayout>