<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding = "10dp"
tools:context=".IngresoPag">

<EditText
    android:id="@+id/txtUsuario"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/txtNombreHint"
    android:inputType="textPersonName"
    android:minHeight="48dp"
    android:singleLine="true"
    android:textColor="@color/black"
    android:textColorHint="@color/black" />

<EditText
    android:id="@+id/txtContra"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/txtContraHint"
    android:inputType="textPassword"
    android:minHeight="48dp"
    android:textColor="@color/black"
    android:textColorHint="@color/black"
    android:autofillHints=""
    android:layout_below="@+id/txtUsuario"/>
<EditText
    android:id="@+id/txtContraDos"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/txtContraDos"
    android:inputType="textPassword"
    android:minHeight="48dp"
    android:textColor="@color/black"
    android:textColorHint="@color/black"
    android:autofillHints=""
    android:layout_below="@+id/txtContra"/>

<Button
    android:id="@+id/btnLogin1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:onClick="inicioSesion"
    android:text="@string/btnIngresarLogin"
    android:textColor="#E1BEE7"
    android:layout_marginTop="50dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:ignore="TextContrastCheck"
    android:layout_below="@+id/txtContraDos"/>

</RelativeLayout>